

OxOOL_includedir = $(includedir)/OxOOL
OxOOL_include_HEADERS = \
	OxOOL/OxOOL.h \
	OxOOL/ModuleManager.h \
	OxOOL/HttpHelper.h \
	OxOOL/L10NTranslator.h \
	OxOOL/XMLConfig.h \
	OxOOL/ConvertBroker.h

OxOOL_Module_includedir = $(includedir)/OxOOL/Module
OxOOL_Module_include_HEADERS = \
	OxOOL/Module/Base.h

