

OxOOL_includedir = $(includedir)/OxOOL
OxOOL_include_HEADERS = \
	OxOOL/OxOOL.h \
	OxOOL/ModuleManager.h \
	OxOOL/HttpHelper.h \
	OxOOL/L10NTranslator.h \
	OxOOL/XMLConfig.h \
	OxOOL/ConvertBroker.h \
	OxOOL/Util.h \
	OxOOL/Util/OptionlValidator.h \
	OxOOL/Util/FileValidator.h

OxOOL_Module_includedir = $(includedir)/OxOOL/Module
OxOOL_Module_include_HEADERS = \
	OxOOL/Module/Base.h

OxOOL_Net_includedir = $(includedir)/OxOOL/Net
OxOOL_Net_include_HEADERS = \
	OxOOL/Net/PrivateKeyHandler.h

# LibreOfficeKit headers
lokit_headers = \
	../../bundled/include/LibreOfficeKit/LibreOfficeKitEnums.h

lokit_includedir = $(includedir)/OxOOL/LibreOfficeKit
lokit_include_HEADERS = $(lokit_headers)

# Common headers
common_headers = \
	../../common/Common.hpp \
	../../common/Clipboard.hpp \
	../../common/Crypto.hpp \
	../../common/JsonUtil.hpp \
	../../common/FileUtil.hpp \
	../../common/JailUtil.hpp \
	../../common/Log.hpp \
	../../common/Protocol.hpp \
	../../common/StateEnum.hpp \
	../../common/StringVector.hpp \
	../../common/Seccomp.hpp \
	../../common/Session.hpp \
	../../common/Unit.hpp \
	../../common/UnitHTTP.hpp \
	../../common/Util.hpp \
	../../common/ConfigUtil.hpp \
	../../common/Authorization.hpp \
	../../common/MessageQueue.hpp \
	../../common/Message.hpp \
	../../common/MobileApp.hpp \
	../../common/Png.hpp \
	../../common/TraceEvent.hpp \
	../../common/Rectangle.hpp \
	../../common/RenderTiles.hpp \
	../../common/SigUtil.hpp \
	../../common/security.h \
	../../common/SpookyV2.h

common_includedir = $(includedir)/OxOOL/common
common_include_HEADERS = $(common_headers)

# Net headers
net_headers = \
	../../net/Buffer.hpp \
	../../net/DelaySocket.hpp \
	../../net/FakeSocket.hpp \
	../../net/HttpRequest.hpp \
	../../net/HttpHelper.hpp \
	../../net/NetUtil.hpp \
	../../net/ServerSocket.hpp \
	../../net/Socket.hpp \
	../../net/WebSocketHandler.hpp \
	../../net/WebSocketSession.hpp

net_includedir = $(includedir)/OxOOL/net
net_include_HEADERS = $(net_headers)

# WSD headers
wsd_headers = \
	../../wsd/Admin.hpp \
	../../wsd/AdminModel.hpp \
	../../wsd/Auth.hpp \
	../../wsd/ClientSession.hpp \
	../../wsd/DocumentBroker.hpp \
	../../wsd/ProxyProtocol.hpp \
	../../wsd/Exceptions.hpp \
	../../wsd/FileServer.hpp \
	../../wsd/ProxyRequestHandler.hpp \
	../../wsd/LOOLWSD.hpp \
	../../wsd/ProofKey.hpp \
	../../wsd/RequestDetails.hpp \
	../../wsd/SenderQueue.hpp \
	../../wsd/ServerURL.hpp \
	../../wsd/Storage.hpp \
	../../wsd/TileCache.hpp \
	../../wsd/TileDesc.hpp \
	../../wsd/TraceFile.hpp \
	../../wsd/UserMessages.hpp \
	../../wsd/QuarantineUtil.hpp \
	../../wsd/HostUtil.hpp

wsd_includedir = $(includedir)/OxOOL/wsd
wsd_include_HEADERS = $(wsd_headers)
